--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -79,8 +79,8 @@ jobs:
         uses: wallet-rs/wallet-rs/.github/actions/rust-install@main
         with:
           sccache_endpoint: ${{ secrets.SCCACHE_ENDPOINT }}
-          sccache_key_id: ${{ secrets.SCCACHE_KEY_ID }}
-          sccache_secret: ${{ secrets.SCCACHE_SECRET }}
+          sccache_key_id: ${{ secrets.SCCACHE_ACCESS_KEY_ID }}
+          sccache_secret: ${{ secrets.SCCACHE_SECRET_ACCESS_KEY }}
       - name: Install Ruby Bundler
         uses: ruby/setup-ruby@v1
         with:
