--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -45,8 +45,6 @@ jobs:
     timeout-minutes: 90
     permissions:
       checks: write
-    env:
-      CARGO_TERM_COLOR: always
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -56,8 +54,8 @@ jobs:
         uses: wallet-rs/wallet-rs/.github/actions/rust-install@main
         with:
           sccache_endpoint: ${{ secrets.SCCACHE_ENDPOINT }}
-          sccache_key_id: ${{ secrets.SCCACHE_KEY_ID }}
-          sccache_secret: ${{ secrets.SCCACHE_SECRET }}
+          sccache_key_id: ${{ secrets.SCCACHE_ACCESS_KEY_ID }}
+          sccache_secret: ${{ secrets.SCCACHE_SECRET_ACCESS_KEY }}
       - name: Install Ruby Bundler
         uses: ruby/setup-ruby@v1
         with:
