--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,6 +68,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Rust Toolchain
         uses: mkroening/rust-toolchain-toml@main
+      - name: Install sccache
+        uses: mozilla-actions/sccache-action@v0.0.3
       - name: Rust Format Check
         uses: actions-rs/cargo@v1
         with:
