--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,6 +70,11 @@ jobs:
         uses: mkroening/rust-toolchain-toml@main
       - name: Install sccache
         uses: mozilla-actions/sccache-action@v0.0.3
+      - if: runner.os == 'Linux'
+        name: Install missing dependencies
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libwebkit2gtk-4.0-dev build-essential curl wget libglib2.0-dev libssl-dev libgtk-3-dev libappindicator3-dev librsvg2-dev libappindicator-dev libgdk3.0-cil libatk1.0-dev
       - name: Rust Format Check
         uses: actions-rs/cargo@v1
         with:
