--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
+    "build": "tsc",
     "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
@@ -116,7 +117,7 @@
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
