chore: ini build tsc (#310)
* chore: ini build tsc

* chore: update

* chore: update

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
+    "build": "tsc",
     "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
@@ -72,6 +73,7 @@
     "@evmts/webpack-plugin": "^0.6.0",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
+    "@lightdotso/solutions": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
@@ -116,7 +118,7 @@
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
