--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
   pull_request:
+  pull_request_target:
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
