--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -8,6 +8,11 @@ on:
       - opened
       - closed
       - synchronize
+  pull_request_target:
+    types:
+      - opened
+      - closed
+      - synchronize
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -32,6 +37,8 @@ jobs:
       - neon-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -76,6 +83,8 @@ jobs:
       - neon-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
