--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
   pull_request:
+  pull_request_target:
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -15,6 +16,8 @@ jobs:
   node-build:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -26,6 +29,8 @@ jobs:
   node-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -37,6 +42,8 @@ jobs:
   node-test:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
