--- a/.github/workflows/prisma.yml
+++ b/.github/workflows/prisma.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
   pull_request:
+  pull_request_target:
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -29,6 +30,8 @@ jobs:
     needs:
       - prisma-turbo
     timeout-minutes: 90
+    permissions:
+      contents: read
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
