--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,10 +13,9 @@
   crate-type = ["staticlib"]
 
 [dependencies]
-  uniffi = "0.23.0"
-  uniffi_macros = "0.23.0"
-
   lightdotso-keychain = { path = "../keychain" }
+  uniffi = { workspace = true }
+  uniffi_macros = { workspace = true }
 
 [build-dependencies]
-  uniffi_build = { version = "0.23.0", features = ["builtin-bindgen"] }
+  uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
