--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -5,6 +5,8 @@ on:
       - main
   pull_request:
   pull_request_target:
+    types:
+      - labeled
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
