--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -9,9 +9,12 @@
   repository.workspace = true
 
 [dependencies]
+  anvil = { workspace = true }
   axum = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
+  ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
+  tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
