--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-  name = "lightdotso-indexer"
+  name = "lightdotso-db"
 
   version.workspace = true
   edition.workspace = true
@@ -9,13 +9,8 @@
   repository.workspace = true
 
 [dependencies]
-  anvil = { workspace = true }
   axum = { workspace = true }
-  clap = { workspace = true, features = ["derive"] }
-  ethers = { workspace = true }
   eyre = { workspace = true }
-  lightdotso-db = { workspace = true }
   lightdotso-prisma = { workspace = true }
-  lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
