feat: ini trpc auth refactor

--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -18,6 +18,9 @@
     "@lightdotso/prisma": "workspace:*",
     "@prisma/client": "^5.0.0",
     "@trpc-limiter/core": "^0.0.8",
+    "@trpc/client": "^10.36.0",
+    "@trpc/next": "^10.36.0",
+    "@trpc/react-query": "^10.36.0",
     "@trpc/server": "^10.36.0",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
