--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,6 +29,8 @@
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
+    "@trpc/next": "^10.36.0",
+    "@trpc/server": "^10.36.0",
     "connectkit": "^1.5.0",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.12",
