--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,7 +29,9 @@
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
+    "@trpc/client": "^10.36.0",
     "@trpc/next": "^10.36.0",
+    "@trpc/react-query": "^10.36.0",
     "@trpc/server": "^10.36.0",
     "connectkit": "^1.5.0",
     "kysely-postgres-js": "^1.1.1",
@@ -41,6 +43,7 @@
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "siwe": "^2.1.4",
+    "superjson": "^1.13.1",
     "viem": "^1.4.2",
     "wagmi": "^1.3.9"
   },
