--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,6 +28,7 @@
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query-devtools": "^4.32.1",
     "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
     "@trpc/client": "^10.36.0",
     "@trpc/next": "^10.36.0",
