--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -8,7 +8,8 @@
         "DATABASE_URL",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
-        "NEXT_PUBLIC_SIGNIN_MESSAGE"
+        "NEXT_PUBLIC_SIGNIN_MESSAGE",
+        "NEXT_PUBLIC_VERCEL_URL"
       ],
       "inputs": ["app/**", "pages/**", "src/**"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
