--- a/packages/auth/turbo.json
+++ b/packages/auth/turbo.json
@@ -8,7 +8,9 @@
         "NEXTAUTH_SECRET",
         "NEXTAUTH_URL",
         "NEXT_PUBLIC_SIGNIN_MESSAGE",
-        "NODE_ENV"
+        "NODE_ENV",
+        "VERCEL_ENV",
+        "VERCEL_URL"
       ],
       "inputs": ["index.ts"],
       "outputs": ["dist/**"]
