--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -12,7 +12,8 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
-  "main": "index.ts",
+  "sideEffects": false,
+  "main": "./index.ts",
   "dependencies": {
     "@lightdotso/auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
