feat: ini connectkit siwe

--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -8,6 +8,7 @@
         "DATABASE_URL",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
+        "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SIGNIN_MESSAGE",
         "NEXT_PUBLIC_VERCEL_URL"
       ],
