--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -12,12 +12,19 @@
   anvil = { workspace = true }
   anyhow = { workspace = true }
   axum = { workspace = true }
+  byteorder = { workspace = true }
+  chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   eyre = { workspace = true }
+  jsonrpsee = { workspace = true }
+  jsonrpsee-http-client = { workspace = true }
+  jsonrpsee-ws-client = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
+  serenity = { workspace = true }
   sled = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
+  zerocopy = { workspace = true }
