--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@
   lightdotso-tracing = { path = "./crates/tracing" }
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+  redb = "1.0.5"
   revm = { version = "3", default-features = false, features = [
     "std",
     "serde",
@@ -73,7 +74,6 @@
   ] }
   serde = "1.0.177"
   serenity = "0.11"
-  sled = "0.34.7"
   silius-grpc = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
   silius-primitives = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
   silius-rpc = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
