--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@
   eyre = "0.6.8"
   foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
   foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
+  futures = "0.3.28"
   http = "0.2.8"
   jsonrpsee = { version = "0.19.0", features = ["macros", "server"] }
   jsonrpsee-http-client = "0.19.0"
