--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -17,6 +17,7 @@
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   eyre = { workspace = true }
+  futures = { workspace = true }
   jsonrpsee = { workspace = true }
   jsonrpsee-http-client = { workspace = true }
   jsonrpsee-ws-client = { workspace = true }
