--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -36,11 +36,16 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.BOT_TOKEN }}
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Node Lint
         run: |
           pnpm turbo run lint
+      - if: failure()
+        name: Commit and Push
+        uses: stefanzweifel/git-auto-commit-action@v4
   node-test:
     runs-on: ubuntu-latest
     timeout-minutes: 90
