--- a/apps/open/package.json
+++ b/apps/open/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lightdotso/assets",
+  "name": "@lightdotso/open",
   "version": "0.0.0",
   "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
