--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -21,6 +21,7 @@
   jsonrpsee = { workspace = true, features = ["macros", "server"] }
   jsonrpsee-http-client = { workspace = true }
   jsonrpsee-ws-client = { workspace = true }
+  lazy_static = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
