--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -78,7 +78,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}/neondb?pgbouncer=true&connect_timeout=10
           DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}/neondb?connect_timeout=10
   neon-deploy-preview:
-    if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false && github.event_name == 'pull_request' || github.event.action == 'opened'
+    if: needs.neon-turbo.outputs.trigger == 'true' && github.event_name == 'pull_request' || github.event.action == 'opened'
     needs:
       - neon-turbo
     runs-on: ubuntu-latest
