--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@
   jsonrpsee = { version = "0.19.0", features = ["macros", "server"] }
   jsonrpsee-http-client = "0.19.0"
   jsonrpsee-ws-client = "0.19.0"
+  lazy_static = "1.4.0"
   lightdotso-bundler = { path = "./crates/bundler" }
   lightdotso-db = { path = "./crates/db" }
   lightdotso-indexer = { path = "./crates/indexer" }
@@ -74,6 +75,7 @@
     "optional_no_base_fee",
   ] }
   serde = "1.0.177"
+  serde_json = "1.0.104"
   serenity = "0.11"
   silius-grpc = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
   silius-primitives = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
