--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -18,15 +18,17 @@
   ethers = { workspace = true }
   eyre = { workspace = true }
   futures = { workspace = true }
-  jsonrpsee = { workspace = true }
+  jsonrpsee = { workspace = true, features = ["macros", "server"] }
   jsonrpsee-http-client = { workspace = true }
   jsonrpsee-ws-client = { workspace = true }
+  lazy_static = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
   redb = { workspace = true }
   serde = { workspace = true }
+  serde_json = { workspace = true }
   serenity = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
   tracing = { workspace = true }
