chore: ini rust service container for postgres

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,18 @@ jobs:
     timeout-minutes: 3
     outputs:
       trigger: ${{ steps.turbo.outputs.trigger }}
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: neon
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Turbo Trigger
         id: turbo
