--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Deploy Checkly
+      - if: github.event_name == 'push'
+        name: Deploy Checkly
         run: |
           pnpm run deploy:checkly
+      - if: github.event_name != 'push'
+        name: Deploy Checkly
+        run: |
+          pnpm run deploy:checkly --preview
   deploy-check:
     if: always()
     needs:
