--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -15,6 +15,7 @@
   anyhow = { workspace = true }
   axum = { workspace = true }
   clap = { workspace = true, features = ["env"] }
+  dotenvy = { workspace = true }
   eyre = { workspace = true }
   http = { workspace = true }
   lightdotso-bundler = { workspace = true }
