--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,18 +20,6 @@ jobs:
     timeout-minutes: 3
     outputs:
       trigger: ${{ steps.turbo.outputs.trigger }}
-    services:
-      postgres:
-        image: postgres:15.3
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: neon
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - name: Turbo Trigger
         id: turbo
@@ -85,6 +73,10 @@ jobs:
         name: Node Build
         run: |
           pnpm turbo run build
+      - if: matrix.workspace
+        name: Docker Compose Up
+        run: |
+          docker-compose up -d --build
       - if: matrix.workspace
         name: Make Install
         run: |
