--- a/crates/telegram/Cargo.toml
+++ b/crates/telegram/Cargo.toml
@@ -9,4 +9,4 @@
   repository.workspace = true
 
 [dependencies]
-  teloxide = { workspace = true }
+  teloxide = { version = "0.12", features = ["macros"] }
