--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -10,6 +10,7 @@
 
 [dependencies]
   axum = { workspace = true }
+  ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-prisma = { workspace = true }
   prisma-client-rust = { workspace = true }
